Update to latest version

--- a/demo/box-styles-processed.css
+++ b/demo/box-styles-processed.css
@@ -9,34 +9,34 @@
 	clear: both;
 }
 /* Display the boxes in two columns */
-.box:container(width > 40em) {
+.box.\:container\(width\>40em\) {
 	display: inline-block;
 	width: 50%;
 	margin-right: -0.3em;
 }
 /* Switch directions for right aligned text */
-.box:container(width > 40em):container(text-align = right) {
+.box.\:container\(width\>40em\).\:container\(text-align\=right\) {
 	margin-right: 0;
 	margin-left: -0.3em;
 }
 /* Display the last box at 100% width if it’s alone in the last row */
-.box:nth-of-type(odd):last-child:container(40em < width <= 70em) {
+.box:nth-of-type(odd):last-child.\:container\(40em\<width\<\=70em\) {
 	width: 100%;
 }
 /* Display the boxes in three columns */
-.box:container(width > 70em) {
+.box.\:container\(width\>70em\) {
 	width: 33.333%;
 }
 /* Flip colors on dark backgrounds */
-.box:container(background-color-lightness < 30%) {
+.box.\:container\(background-color-lightness\<30\%\) {
 	color: white;
 }
 /* Change border color on green backgrounds */
-.box:container(60deg < background-color-hue < 180deg):container(10% < background-color-lightness < 80%):container(background-color-saturation > 50%) {
+.box.\:container\(60deg\<background-color-hue\<180deg\).\:container\(10\%\<background-color-lightness\<80\%\).\:container\(background-color-saturation\>50\%\) {
 	border-color: darkred;
 }
 /* Improve readability for small font sizes */
-.box:container(font-size < 11px) {
+.box.\:container\(font-size\<11px\) {
 	border-width: 2px;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
@@ -46,20 +46,20 @@
 	background: rgba(0, 0, 0, 0.15);
 }
 /* Flip colors on dark backgrounds */
-.box-image:container(background-color-lightness < 30%) {
+.box-image.\:container\(background-color-lightness\<30\%\) {
 	background: rgba(255, 255, 255, 0.15);
 }
 /* Increase the image size for very small boxes */
-.box-image:container(width < 10em) {
+.box-image.\:container\(width\<10em\) {
 	margin: -1em -1em 0;
 }
 /* Create two columns inside the box */
-.box-image:container(width > 25em) {
+.box-image.\:container\(width\>25em\) {
 	float: left;
 	width: 12em;
 }
 /* Switch directions for right aligned text */
-.box-image:container(width > 25em):container(text-align = right) {
+.box-image.\:container\(width\>25em\).\:container\(text-align\=right\) {
 	float: right;
 }
 .box-image > img {
@@ -71,11 +71,11 @@
 	background: grey;
 }
 /* Create two columns inside the box */
-.box-text:container(width > 25em) {
+.box-text.\:container\(width\>25em\) {
 	margin-left: 13em;
 }
 /* Switch directions for right aligned text */
-.box-text:container(width > 25em):container(text-align = right) {
+.box-text.\:container\(width\>25em\).\:container\(text-align\=right\) {
 	margin-right: 13em;
 	margin-left: 0;
 }
@@ -87,10 +87,10 @@
 	text-align: center;
 }
 /* Display price and buy button side by side */
-.box-text-price:container(width > 17em) {
+.box-text-price.\:container\(width\>17em\) {
 	float: left;
 }
-.box-text-buy:container(width > 17em) {
+.box-text-buy.\:container\(width\>17em\) {
 	float: right;
 	color: inherit;
 }
